testsuite/escript/classes/fail-super-scope.err
fail-super-scope.src:10:12: error: Unknown identifier 'super::Method'.